# flask-webdev

./: .gitignore  app.py  config.py  flask-dev.sh  flask.sh  pyproject.toml  ragtime.py  requirements.txt
app/: __init__.py  email.py  models.py
app/auth/: __init__.py  forms.py  views.py
app/main/: __init__.py  errors.py  forms.py  views.py
app/templates/: base.html  derived.html  error.html  index.html  macros.html
app/templates/auth/: login.html  register.html  unconfirmed.html
app/templates/auth/email/: confirm.html  confirm.txt
app/templates/mail/: confirm.html  confirm.txt  new_user.html  new_user.txt  welcome.html  welcome.txt
migrations/versions/: 3b31c452f4e7_added_user_age_column.py  73ed9862bacb_added_password_hash.py  881bddb6081a_added_user_confirmation.py  bada4731e1b0_added_user_email.py  df982170f27c_initial_migration.py
templates/: base.html  date.html  index.html  songs.html
tests/: conftest.py
tests/unit/: test_app.py
