[tool.poetry]
name = "flask-webdev"
version = "0.1.0"
description = ""
authors = ["Jon Fincher <jfincher42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-Bootstrap = "^3.3.7"
Flask-WTF = "^1.0.1"
Flask-SQLAlchemy = "^2.5.1"
PyMySQL = "^1.0.2"
Flask-Migrate = "^3.1.0"
python-dotenv = "^0.20.0"
Flask-Login = "^0.6.1"
email-validator = "^1.2.1"
Flask-Mail = "^0.9.1"
PyJWT = "^2.4.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
rope = "^1.1.1"
pytest = "^7.1.2"
cryptography = "^37.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
